src/test/wacc/invalid/syntaxErr/literals/charLiteralSingle.wacc
# Characters can have at most one character in them!
# Thanks to Panayiotis Gavriil

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
    char c = 'Hello Jamie'
end